# qsiprep

./: .codespellrc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  AGENTS.md  CHANGES.rst  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.base  DockerfileDSIStudio  MANIFEST.in  README.rst  REFERENCES.md  docker_debug.sh  get_version.py  grouping_logic.md  long_description.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  slurm-1946.out  slurm-1947.out  test.ipynb  test_docker.sh  test_recon_docker.sh  tox.ini  update_changes.sh  versioneer.py  vulture.txt
.circleci/: 3TissueAutotrackTest.sh  3TissueReconTests.sh  3dshore_dsistudio_mrtrix.json  AMICOReconTests.sh  AllFieldmaps.sh  AutoTrackTest.sh  CUDATest.sh  DIPYReconTests.sh  DRBUDDI_SHORELine_epi.sh  DRBUDDI_TENSORLine_epi.sh  DRBUDDI_eddy_rpe_series.sh  DSCSDSI.sh  DSCSDSI_outputs.txt  DSDTI_TOPUP.sh  DSDTI_nofmap.sh  DSDTI_nofmap_outputs.txt  DSDTI_outputs.txt  DSDTI_synfmap.sh  DSDTI_synsdc_outputs.txt  FreeSurferIngressTest.sh  HBCD_DRBUDDI.sh  HBCD_preproc.sh  IngressReconTests.sh  IntramodalTemplate.sh  IntramodalTemplate_outputs.txt  Mrtrix3ReconTests.sh  MultiT1w.sh  MultishellScalarfestTests.sh  PyAFQReconExternalTrk.sh  PyAFQReconTests.sh  ReconTests.sh  SHORELine_DRBUDDI.sh  ScalarMapper.sh  TortoiseRecon.sh  config.yml  continue_config.yml  csdsi_3dshore_test.json  data_versions.txt  ds005_outputs.txt  ds005_partial_outputs.txt  (+8 more)
.circleci/pypi_wheel/: build-wheels.sh
.circleci/pytests/: test_drbuddi.py
.cursor/rules/: cursorenv.mdc  pennlinc-shared.mdc  qsiprep.mdc
.github/: config.yml  dependabot.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: lint.yml  pixi-lock.yml
.maint/: INSTRUCTIONS.md
.readthedocs/: environment.yaml
docker/scripts/: get_templates.sh  install_dsi_studio.sh
docs/: .gitignore  Makefile  api.rst  changes.md  changes.rst  citing.rst  comparisons.md  comparisons.rst  conf.py  contributors.rst  environment.yml  grouping.rst  help.rst  index.rst  installation.rst  license.rst  links.rst  merging.rst  outputs.rst  preprocessing.rst  pull_request_template.md  quickstart.rst  reconstruction.rst  requirements.txt  sdc.rst  usage.rst  workflows.rst
docs/_static/: theme_overrides.css
docs/anat/: base.rst
docs/api/: index.rst  interfaces.rst
docs/sphinxext/: github_link.py
docs/tools/: svg_frames_to_png.py
notebooks/: Grouping by fieldmaps.ipynb  StructuralConnectivityMatrices.ipynb  qsirecon.ipynb  test_spaces.ipynb
qsiprep/: __about__.py  __init__.py  _version.py  _warnings.py  config.py
qsiprep/cli/: convertODFs.py  group_report.py  parser.py  qsiprep_dwi_mask.py  recon_plot.py  run.py  run_.py  sample_openfmri.py  sample_openfmri_tasks_list.py  version.py  workflow.py
qsiprep/data/: FreeSurfer2dseg.txt  FreeSurferColorLUT.txt  NOTICE  __init__.py  affine.json  b02b0_1.cnf  bids.json  boilerplate.bib  diffprep_params.json  eddy_params.json  eddy_params_testing.json  epi_atlasbased_brainmask.json  epi_registration_settings.json  fmap-any_registration.json  fmap-any_registration_testing.json  fmap_atlas_2_MNI152NLin2009cAsym_affine.mat  freesurfer_to_qsiprep.json  identitytransform.txt  intermodal_ACPC.json  intermodal_ACPC_sloppy.json  intramodal_ACPC.json  intramodal_ACPC_sloppy.json  intramodal_nonlinear.json  io_spec.json  itkIdentityTransform.txt  odfs.mat  paper_sample.yml  quick_syn.json  reports-spec-anat.yml  reports-spec-dwi.yml  reports-spec-recon-anat.yml  reports-spec-recon-dwi.yml  reports-spec-recon.yml  reports-spec.yml  shoreline_coarse.json  shoreline_coarse_Affine.json  shoreline_coarse_Rigid.json  shoreline_precise_Affine.json  shoreline_precise_Rigid.json  shoreline_sloppy_Affine.json  (+3 more)
qsiprep/engine/: __init__.py  workflows.py
qsiprep/interfaces/: __init__.py  amico.py  anatomical.py  ants.py  bids.py  confounds.py  connectivity.py  converters.py  denoise.py  dipy.py  dsi_studio.py  dwi_merge.py  dwipreproc.py  eddy.py  epi_fmap.py  fmap.py  freesurfer.py  gradients.py  images.py  ingress.py  interchange.py  itk.py  mrtrix.py  nilearn.py  niworkflows.py  patch2self.py  patches.py  phase.py  pyafq.py  qc.py  recon_scalars.py  reports.py  scalar_mapping.py  shoreline.py  surf.py  synb0.py  tortoise.py  utils.py
qsiprep/niworkflows/: __about__.py  __init__.py  _version.py  due.py
qsiprep/reports/: core.py  report.py
qsiprep/tests/: conftest.py  run_local_tests.py  test_boilerplate_phase.py  test_cli.py  test_cli_run.py  test_config_phase.py  test_grouping_golden.py  test_interfaces_ants.py  test_interfaces_diffprep.py  test_interfaces_dipy.py  test_interfaces_dsi_studio.py  test_interfaces_eddy.py  test_interfaces_freesurfer.py  test_interfaces_gradients.py  test_interfaces_images.py  test_interfaces_mrtrix3.py  test_interfaces_niworkflows.py  test_interfaces_phase.py  test_parser_phase.py  test_reports.py  test_utils_fieldmaps.py  test_utils_grouping.py  test_utils_grouping_debug.txt  test_utils_misc.py  test_utils_phase.py  test_workflows.py  test_workflows_phase.py  tests.py  utils.py
qsiprep/utils/: __init__.py  atlases.py  bids.py  brainsuite_shore.py  bspline.py  debug.py  fieldmaps.py  grouping.py  ingress.py  maths.pyx  misc.py  phase.py  resources.py  sentry.py  shm.py  sloppy_recon.py  spaces.py  testing.py
qsiprep/viz/: __init__.py  config.json  recon_config.json  report.tpl  reports.py  utils.py
qsiprep/workflows/: anatomical.py  base.py  build_pipeline.py  reports.py
scratch/: Testing Merges.ipynb  layout_test.py
scripts/: generate_reference_mask.py
tests/: AllFieldmaps.sh  DSCSDSI.sh  DSDTI_nofmap.sh  IntramodalTemplate.sh  MultiT1w.sh  data_tests.py  get_data.py  get_data.sh  grouping_tests.py  opts_tests.py  recon_tests.py  smoke_tests.py  test_lesion.py
wrapper/: LICENSE  pyproject.toml  qsiprep_docker.py  qsiprep_singularity.py  setup.py
wrapper/qsiprep_container/: qsiprep_docker.py  qsiprep_singularity.py
(+319 files in other folders)
