[build-system]
requires = ["hatchling", "hatch-vcs", "nipreps-versions", "cython", "numpy"]
build-backend = "hatchling.build"

[project]
name = "qsiprep"
description = "qsiprep builds workflows for preprocessing and reconstructing q-space images"
readme = "long_description.rst"
authors = [{name = "The PennBBL developers"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    'importlib_resources; python_version < "3.11"',
    "dipy>=1.8.0,<1.9.0",
    "fury",
    "indexed_gzip <= 1.8.7",
    "jinja2 < 3.1",
    "matplotlib",
    "networkx ~= 2.8.8",
    "nibabel <= 5.2.0",
    "nilearn == 0.10.1",
    "nipype == 1.8.6",
    "nireports",
    "niworkflows >=1.9,<= 1.10",
    "numpy <= 1.26.3",
    "pandas < 2.0.0",
    "psutil <= 5.9.8",
    "pybids",
    "pyyaml",
    "scikit-image",
    "scikit-learn <= 1.4.0",
    "seaborn",
    "sentry_sdk",
    "SimpleITK",
    "svgutils <= 0.3.4",
    "transforms3d",
    "vtk",
    "xvfbwrapper",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pennbbl/qsiprep"
Documentation = "https://www.qsiprep.readthedocs.io"
Paper = "https://doi.org/10.1038/s41592-022-01458-7"
"Docker Images" = "https://hub.docker.com/r/pennbbl/qsiprep/tags/"

[project.optional-dependencies]
doc = [
    "dipy",
    "doctest-ignore-unicode",
    "lxml_html_clean",
    "nbsphinx",
    "pydot >= 1.2.3",
    "pydotplus",
    "recommonmark",
    "sphinx >= 4.2.0",
    "sphinx-argparse",
    "sphinx_markdown_tables",
    "sphinx_rtd_theme",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-bibtex",
]
tests = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-env",
]
maint = [
    "fuzzywuzzy",
    "python-Levenshtein",
]

# Aliases
all = ["qsiprep[doc,maint,tests]"]

[project.scripts]
qsiprep = "qsiprep.cli.run:main"

#
# Hatch configurations
#

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]  # No longer needed in sdist

[tool.hatch.build.targets.wheel]
packages = ["qsiprep"]
exclude = [
    "qsiprep/tests/data",  # Large test data directory
]

##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
source = "vcs"
# raw-options = { version_scheme = "nipreps-calver" }

[tool.hatch.build.hooks.vcs]
version-file = "qsiprep/_version.py"

#
# Developer tool configurations
#

[tool.black]
line-length = 99
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
    | qsiprep/niworkflows
  )/
  | qsiprep/_version.py
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["isort", "test"]
known_local_folder = ["qsiprep"]

[tool.flake8]
max-line-length = "99"
doctests = "False"
exclude = [
    "*build/",
    "qsiprep/_version.py",
    "qsiprep/_warnings.py",
    "qsiprep/config.py",
    "qsiprep/data/",
    "qsiprep/tests/",
    "qsiprep/niworkflows/",
    "qsiprep/utils/sentry.py",
]
ignore = ["D107", "E203", "E402", "E722", "W503", "N803", "N806", "N815", "W605"]
per-file-ignores = [
    "**/__init__.py : F401",
    "docs/conf.py : E265",
]

[tool.pytest.ini_options]
addopts = '-m "not integration"'
markers = [
    "integration: integration tests to skip by default",
    "dsdti_fmap: test 3",
    "dscsdsi_fmap: test 4",
    "amico_noddi: test 5",
    "cuda: test 6",
    "drbuddi_rpe: test 9",
    "drbuddi_shoreline_epi: test 10",
    "drbuddi_tensorline_epi: test 11",
    "dscsdsi: test 12",
    "dsdti_nofmap: test 13",
    "dsdti_synfmap: test 14",
    "dsdti_topup: test 15",
    "intramodal_template: test 16",
    "multi_t1w: test 22",
    "maternal_brain_project: multi-shell with GRE field map",
    "forrest_gump: single-shell with GRE field map",
]
env = [
    "RUNNING_PYTEST = 1",
]

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
    "qsiprep/_version.py"
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    'raise NotImplementedError',
    'warnings\.warn',
]
