[build-system]
requires = ["hatchling", "hatch-vcs", "nipreps-versions", "cython", "numpy"]
build-backend = "hatchling.build"

[project]
name = "QSIPrep"
description = "qsiprep builds workflows for preprocessing and reconstructing q-space images"
readme = "long_description.rst"
authors = [{name = "The PennLINC developers"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    'importlib_resources; python_version < "3.11"',
    "acres",
    "dipy>=1.8.0,<1.9.0",
    "fury",
    "indexed_gzip <= 1.8.7",
    "jinja2 < 3.1",
    "matplotlib",
    "networkx ~= 2.8.8",
    "nibabel <= 5.2.0",
    "nilearn == 0.10.1",
    "nipype == 1.9.1",
    "nireports >= 24.0.3",
    "niworkflows >=1.9,<= 1.10",
    "numpy <= 1.26.3",
    "pandas < 2.0.0",
    "psutil <= 5.9.8",
    "pybids",
    "pyyaml",
    "scikit-image",
    "scikit-learn <= 1.4.0",
    "seaborn",
    "sentry_sdk",
    "SimpleITK",
    "svgutils <= 0.3.4",
    "transforms3d",
    "vtk",
    "xvfbwrapper",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pennlinc/qsiprep"
Documentation = "https://www.qsiprep.readthedocs.io"
Paper = "https://doi.org/10.1038/s41592-022-01458-7"
"Docker Images" = "https://hub.docker.com/r/pennlinc/qsiprep/tags/"

[project.optional-dependencies]
doc = [
    "dipy",
    "doctest-ignore-unicode",
    "lxml_html_clean",
    "nbsphinx",
    "pydot >= 1.2.3",
    "pydotplus",
    "recommonmark",
    "sphinx >= 4.2.0",
    "sphinx-argparse",
    "sphinx_markdown_tables",
    "sphinx_rtd_theme",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-bibtex",
]
dev = [
    "ruff ~= 0.4.3",
    "pre-commit",
]
tests = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-xdist",
]
maint = [
    "fuzzywuzzy",
    "python-Levenshtein",
]

# Aliases
all = ["qsiprep[dev,doc,maint,tests]"]

[project.scripts]
qsiprep = "qsiprep.cli.run:main"

#
# Hatch configurations
#

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]  # No longer needed in sdist

[tool.hatch.build.targets.wheel]
packages = ["qsiprep"]
exclude = [
    "qsiprep/tests/data",  # Large test data directory
]

##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
source = "vcs"
# raw-options = { version_scheme = "nipreps-calver" }

[tool.hatch.build.hooks.vcs]
version-file = "qsiprep/_version.py"

#
# Developer tool configurations
#

# Disable black
[tool.black]
exclude = ".*"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "YTT",
  "S",
  "BLE",
  "B",
  "A",
  # "CPY",
  "C4",
  "DTZ",
  "T10",
  # "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "PT",
  "Q",
]
ignore = [
  "S101",  # Ignore use of assert for now
  "S105",
  "S311",  # We are not using random for cryptographic purposes
  "ISC001",
  "S603",
  "S605",  # TODO: Fix these
  "DTZ005",  # TODO: Fix these
  "B904",  # TODO: Fix these
  "A001",  # TODO: Fix these
  "B006",  # TODO: Fix these
  "S607",  # TODO: Fix these
  "S108",  # TODO: Fix these
  "S602",  # TODO: Fix these
  "E402",  # TODO: Fix these
  "UP028",  # TODO: Fix these
  "UP031",  # TODO: Fix these
  "BLE001",  # TODO: Fix these
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.extend-per-file-ignores]
"*/test_*.py" = ["S101"]
"qsiprep/utils/debug.py" = ["A002", "T100"]
"docs/conf.py" = ["A001"]
"docs/sphinxext/github_link.py" = ["BLE001"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = '-m "not integration"'
markers = [
    "integration: integration tests to skip by default",
    "dsdti_fmap: test 3",
    "dscsdsi_fmap: test 4",
    "amico_noddi: test 5",
    "cuda: test 6",
    "drbuddi_rpe: test 9",
    "drbuddi_shoreline_epi: test 10",
    "drbuddi_tensorline_epi: test 11",
    "dscsdsi: test 12",
    "dsdti_nofmap: test 13",
    "dsdti_synfmap: test 14",
    "dsdti_topup: test 15",
    "intramodal_template: test 16",
    "multi_t1w: test 22",
    "maternal_brain_project: multi-shell with GRE field map",
    "forrest_gump: single-shell with GRE field map",
    "forrest_gump_patch2self: single-shell with GRE field map and patch2self",
]
env = [
    "RUNNING_PYTEST = 1",
]

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
    "qsiprep/_version.py"
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    'raise NotImplementedError',
    'warnings\.warn',
]
