[versioneer]
VCS = git
style = pep440
versionfile_source = qsiprep/_version.py
versionfile_build = qsiprep/_version.py
tag_prefix =
parentdir_prefix =


[metadata]
url = https://github.com/pennbbl/qsiprep
author = The PennBBL developers
author_email = Matthew.Cieslak@pennmedicine.upenn.edu
maintainer = Matt Cieslak
maintainer_email = Matthew.Cieslak@pennmedicine.upenn.edu
description = qsiprep builds workflows for preprocessing and reconstructing q-space images
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = 3-clause BSD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.5
install_requires =
    nibabel >=2.2.1
    indexed_gzip >=0.8.8
    nilearn !=0.5.0, !=0.5.1
    nipype <=1.1.9
    psutil >=5.4
    pybids ~= 0.9.3
    matplotlib <=2.2.3
    svgutils
    numpy
    dipy<=0.15.0
    seaborn
    pandas
    pyyaml
    jinja2
    scikit-learn >=0.20.2
    scikit-image
    statsmodels
test_requires =
    coverage
    codecov
    pytest
packages = find:
include_package_data = True

[options.exclude_package_data]
* = tests

[options.extras_require]
datalad = datalad
doc =
    dipy
    nbsphinx
    packaging
    pydot >=1.2.3
    pydotplus
    sphinx >=1.5.3
    sphinx-argparse
    sphinx_rtd_theme
docs =
    %(doc)s
duecredit = duecredit
resmon =
tests =
    coverage
    codecov
    pytest
all =
    %(datalad)s
    %(doc)s
    %(duecredit)s
    %(tests)s

[options.package_data]
qsiprep =
    VERSION
    data/*.json
    data/*.nii.gz
    data/*.mat
    data/*.cnf
    data/boilerplate.bib
    data/itkIdentityTransform.txt
    data/pipelines/*.json
    viz/*.tpl
    viz/*.json
    niworkflows/data/t1w-mni_registration*.json
    niworkflows/data/bold-mni_registration*.json


[options.entry_points]
console_scripts =
    qsiprep=qsiprep.cli.run:main
    mif2fib=qsiprep.cli.convertODFs:mif_to_fib
    fib2mif=qsiprep.cli.convertODFs:fib_to_mif


[flake8]
max-line-length = 99
doctests = True
exclude=*build/
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501
