[versioneer]
VCS = git
style = pep440
versionfile_source = qsiprep/_version.py
versionfile_build = qsiprep/_version.py
tag_prefix =
parentdir_prefix =


[metadata]
url = https://github.com/pennbbl/qsiprep
author = The PennBBL developers
author_email = Matthew.Cieslak@pennmedicine.upenn.edu
maintainer = Matt Cieslak
maintainer_email = Matthew.Cieslak@pennmedicine.upenn.edu
description = qsiprep builds workflows for preprocessing and reconstructing q-space images
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = 3-clause BSD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.5
install_requires =
    setuptools <= 65.5.1
    nibabel >=3.0.0
    indexed_gzip >=0.8.8
    nilearn >= 0.10.1
    nipype >=1.3.1
    psutil >=5.4
    pybids < 0.16.1
    matplotlib
    svgutils <= 0.3.0
    numpy >= 1.18.5
    dipy >= 1.0
    vtk
    sentry_sdk
    fury
    networkx <= 2.6.3
    dmri-amico == 1.5.4
    seaborn
    SimpleITK
    pandas < 2.0.0
    pyyaml
    jinja2 < 3.1
    xvfbwrapper
    scikit-learn >=0.20.2
    scikit-image
    SimpleITK
    pyAFQ >= 1.0.1
    transforms3d
test_requires =
    coverage
    codecov
    pytest
packages = find:
include_package_data = True

[options.exclude_package_data]
* = tests

[options.extras_require]
datalad = datalad
doc =
    dipy
    nbsphinx
    packaging
    pydot >=1.2.3
    pydotplus
    sphinx <=2.2.0
    sphinx-argparse
    sphinx_rtd_theme
    sphinx_markdown_tables
    recommonmark
docs =
    %(doc)s
duecredit = duecredit
resmon =
sentry = sentry-sdk >=0.6.9
tests =
    coverage
    codecov
    pytest
all =
    %(datalad)s
    %(doc)s
    %(duecredit)s
    %(sentry)s
    %(tests)s

[options.package_data]
qsiprep =
    VERSION
    data/*.json
    data/*.nii.gz
    data/*.mat
    data/*.cnf
    data/boilerplate.bib
    data/itkIdentityTransform.txt
    data/FreeSurfer2dseg.txt
    data/FreeSurferColorLUT.txt
    data/pipelines/*.json
    data/schemes/*.bval
    data/schemes/*.bvec
    viz/*.tpl
    viz/*.json
    niworkflows/data/t1w-mni_registration*.json
    niworkflows/data/bold-mni_registration*.json


[options.entry_points]
console_scripts =
    qsiprep=qsiprep.cli.run:main
    mif2fib=qsiprep.cli.convertODFs:mif_to_fib
    fib2mif=qsiprep.cli.convertODFs:fib_to_mif
    qsiprep_group_report=qsiprep.cli.group_report:aggregate_reports
    recon_plot=qsiprep.cli.recon_plot:recon_plot


[flake8]
max-line-length = 99
doctests = True
exclude=*build/
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501
