[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "qsiprep_container"
description = "qsiprep builds workflows for preprocessing and reconstructing q-space images"
readme = "../long_description.rst"
authors = [{name = "The PennLINC developers"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    'importlib_resources; python_version < "3.11"',
]
version = "0.20.1"

[project.urls]
Homepage = "https://github.com/pennbbl/qsiprep"
Documentation = "https://www.qsiprep.readthedocs.io"
Paper = "https://doi.org/10.1038/s41592-022-01458-7"
"Docker Images" = "https://hub.docker.com/r/pennlinc/qsiprep/tags/"

[project.scripts]
qsiprep-docker = "qsiprep_container.qsiprep_docker:main"
qsiprep-singularity = "qsiprep_container.qsiprep_singularity:main"

#
# Hatch configurations
#

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["qsiprep_container"]
exclude = [ ]

##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
source = "vcs"
